--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="mainNavbar">
+      <div class="nestedNavbar">
+        <div class="companyName">GOBY</div>
+        <div class="navIconButton">
+          <div class="subscribeArrow">
+            <div class="subscribe">SUBSCRIBE & SAVE</div>
+            <div><img src="/arrowlogo.png" alt="" class="arrowlogo" /></div>
+          </div>
+          <div><button class="shopNow">SHOP NOW</button></div>
+        </div>
+      </div>
+    </div>
+
+    <div><img src="/twobrushesimage.jfif" alt="" class="twobrushesimage"></div>
+    <div></div>
+  </body>
 </html>
