--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="mainNavbar">
@@ -20,7 +20,23 @@
       </div>
     </div>
 
-    <div><img src="/twobrushesimage.jfif" alt="" class="twobrushesimage"></div>
-    <div></div>
+    <div class="twobrushesImageSection">
+      <img src="/twobrushesimage.jfif" alt="" class="twobrushesImage" />
+
+      <div class="promotionSection">
+        <div>
+          <img
+            src="/dentistrecommendedlogo.png"
+            alt=""
+            class="dentistRecommendedLogo"
+          />
+        </div>
+        <div class="brushingPerfectedText">BRUSHING PERFECTED</div>
+        <div class="gobyProvided">
+          Goby provided an award-winning brush <br />at a jaw dropping price
+        </div>
+        <div><button class="shopNow secondButton">SHOP NOW</button></div>
+      </div>
+    </div>
   </body>
 </html>
