--- a/index.html
+++ b/index.html
@@ -38,5 +38,68 @@
         <div><button class="shopNow secondButton">SHOP NOW</button></div>
       </div>
     </div>
+
+    <div class="mainNavbar afterHeroesSection0">
+      <div class="nestedNavbar afterHeroesSection">
+        <div class="features">
+          <div class="firstFeature">Top Electric Toothbrush</div>
+          <div class="secondFeature">ASK THE DENTIST</div>
+        </div>
+        <div class="features">
+          <div class="firstFeature">Best Subsription Toothbrush</div>
+          <div class="secondFeature">WIRECUTTER</div>
+        </div>
+        <div class="features">
+          <div class="firstFeature">2017 Grooming Award</div>
+          <div class="secondFeature">MEN'S HEALTH</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="singleBrushImageSection">
+      <img src="/brushimage.jpg" alt="" class="twobrushesImage" />
+      <div class="benefitsSection">
+        <div class="benefits">
+          MAXIMUM CLEAN. <br />
+          FRACTION OF THE PRICE.
+        </div>
+        <div><button class="shopNow">SHOP GOBY</button></div>
+      </div>
+      <div class="fiveFeatures">
+        <div><img src="/pipeimage.png" alt="" class="pipeImage" /></div>
+        <div class="logoFeature">
+          <div><img src="/tickimage.png" alt="" class="arrowlogo" /></div>
+          <div class="variousFeatures">OSCILLATIONG BRUSH HEAD</div>
+        </div>
+      </div>
+      <div class="fiveFeature2">
+        <div><img src="/pipeimage.png" alt="" class="pipeImage" /></div>
+        <div class="logoFeature">
+          <div><img src="/tickimage.png" alt="" class="arrowlogo" /></div>
+          <div class="variousFeatures">BUILT-IN TIMER</div>
+        </div>
+      </div>
+      <div class="fiveFeature3">
+        <div><img src="/pipeimage.png" alt="" class="pipeImage" /></div>
+        <div class="logoFeature">
+          <div><img src="/tickimage.png" alt="" class="arrowlogo" /></div>
+          <div class="variousFeatures">LONG LASTING BATTERY</div>
+        </div>
+      </div>
+      <div class="fiveFeature4">
+        <div><img src="/pipeimage.png" alt="" class="pipeImage" /></div>
+        <div class="logoFeature">
+          <div><img src="/tickimage.png" alt="" class="arrowlogo" /></div>
+          <div class="variousFeatures">SOFT, PREMIUM BRISTLES</div>
+        </div>
+      </div>
+      <div class="fiveFeature5">
+        <div><img src="/pipeimage.png" alt="" class="pipeImage" /></div>
+        <div class="logoFeature">
+          <div><img src="/tickimage.png" alt="" class="arrowlogo" /></div>
+          <div class="variousFeatures">SOFT-TOUCH HANDLE</div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
