--- a/index.html
+++ b/index.html
@@ -101,5 +101,68 @@
         </div>
       </div>
     </div>
+
+    <div class="healthierSmileAndMOre">
+      <div class="healthierSmile">A HEALTHIER SMILE, DELIVERED.</div>
+      <div class="moreComments">
+        Rotationally oscillating brush heads are proven to clean <br />
+        better. By selling directly to you, we offer an award winning
+        <br />electric toothbrush at a fraction of the price.
+      </div>
+    </div>
+
+    <div class="subscribeSaveCancel0">
+      <div class="subscribeSaveCancel">
+        <div class="firstOption">
+          <div><img src="/thumbsupemoji.png" alt="" class="emoji" /></div>
+          <div class="option">SUBSCRIBE</div>
+          <div class="optionAdvantage">
+            and we'll automatically <br />
+            send you new brush heads.
+          </div>
+        </div>
+        <div class="firstOption">
+          <div><img src="/thumbsupemoji.png" alt="" class="emoji" /></div>
+          <div class="option">SAVE $15</div>
+          <div class="optionAdvantage">
+            on your brush kit <br />
+            when you subscribe.
+          </div>
+        </div>
+        <div class="firstOption">
+          <div><img src="/thumbsupemoji.png" alt="" class="emoji" /></div>
+          <div class="option">CANCEL ANYTIME</div>
+          <div class="optionAdvantage">
+            or change your subscription, <br />
+            no questions asked.
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="brushHeadsBuzz0">
+      <div class="brushHeadsBuzz">
+        <div>
+          <img src="/brushheadsimage.png" alt="" class="brushHeadsImage" />
+        </div>
+        <div class="thanSymbols">
+          <img src="/lessthansymbol.png" alt="" />
+        </div>
+        <div class="buzz">
+          <div class="buzzOnGoby">THE BUZZ ON GOBY</div>
+          <div class="moreOnBuzz">
+            "The company has revamped the <br />
+            business of teeth-cleaning in the <br />
+            Warby Parker vein: smart sourcing, <br />direct-to-consumer
+            delivery, and <br />sleek packaging."
+          </div>
+          <div class="vogue">-VOGUE</div>
+          <div><button class="shopNow">SEE REVIEWS</button></div>
+        </div>
+        <div class="thanSymbols">
+          <img src="greaterthansymbol.png" alt=""  />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
