--- a/index.html
+++ b/index.html
@@ -164,5 +164,13 @@
         </div>
       </div>
     </div>
+
+    <div class="classRoomImageDonation"><img src="/classroomimage.jpg" alt="" class="classRoomImage">
+    <div class="donation">
+      <div class="donationDetetails">GOBI GIVES BACK</div>
+      <div class="donationDetetails2">We're on a mission to make oral care accessible to all. <br>By selling to you, we are able to offer premium oral <br>care at a fraction of the price. But it doesn't stop there.</div>
+      <div class="donationDetetails2">We also partner with NYU College of Dentistry's Global <br> Student Outreach Program, donating a percentage of all sales <br>to help provide dental services to people around the world as <br>well as in our own backyard. </div>
+    </div>
+  </div>
   </body>
 </html>
