--- a/index.html
+++ b/index.html
@@ -160,17 +160,54 @@
           <div><button class="shopNow">SEE REVIEWS</button></div>
         </div>
         <div class="thanSymbols">
-          <img src="greaterthansymbol.png" alt=""  />
+          <img src="greaterthansymbol.png" alt="" />
         </div>
       </div>
     </div>
 
-    <div class="classRoomImageDonation"><img src="/classroomimage.jpg" alt="" class="classRoomImage">
-    <div class="donation">
-      <div class="donationDetetails">GOBI GIVES BACK</div>
-      <div class="donationDetetails2">We're on a mission to make oral care accessible to all. <br>By selling to you, we are able to offer premium oral <br>care at a fraction of the price. But it doesn't stop there.</div>
-      <div class="donationDetetails2">We also partner with NYU College of Dentistry's Global <br> Student Outreach Program, donating a percentage of all sales <br>to help provide dental services to people around the world as <br>well as in our own backyard. </div>
+    <div class="classRoomImageDonation">
+      <img src="/classroomimage.jpg" alt="" class="classRoomImage" />
+      <div class="donation">
+        <div class="donationDetetails">GOBI GIVES BACK</div>
+        <div class="donationDetetails2">
+          We're on a mission to make oral care accessible to all. <br />By
+          selling to you, we are able to offer premium oral <br />care at a
+          fraction of the price. But it doesn't stop there.
+        </div>
+        <div class="donationDetetails2">
+          We also partner with NYU College of Dentistry's Global <br />
+          Student Outreach Program, donating a percentage of all sales <br />to
+          help provide dental services to people around the world as <br />well
+          as in our own backyard.
+        </div>
+      </div>
     </div>
-  </div>
+
+    <div class="hashTagDetails">
+      <div class="hashTag">#GOBYGRAM</div>
+      <div class="afterHashTag">
+        See who's already has their routine electrified.
+      </div>
+    </div>
+    <div class="variousUsers0">
+      <div class="variousUsers">
+        <div class="users">
+          <div><img src="/flashfoodimage.png" alt="" /></div>
+          <div class="userType">@FLASHFOOD</div>
+        </div>
+        <div class="users">
+          <div><img src="/whimsicalchickimage.png" alt="" /></div>
+          <div class="userType">@THE WHIMSICAL CHICK</div>
+        </div>
+        <div class="users">
+          <div><img src="/blushedlilyimage.png" alt="" /></div>
+          <div class="userType">@THE BLUSHED LILY</div>
+        </div>
+        <div class="users">
+          <div><img src="/rosalieagencyimage.png" alt="" /></div>
+          <div class="userType">@ROSALIE AGENCY</div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
