desktop media query complete

--- a/index.html
+++ b/index.html
@@ -209,5 +209,41 @@
         </div>
       </div>
     </div>
+
+    <div class="smileyCompliments0">
+      <div class="smileyCompliments">
+        <div>
+          <img
+            src="/freshguaranteelogo.png"
+            alt=""
+            class="freshGuaranteeLogo"
+          />
+        </div>
+        <div class="compliments">
+          UNLIMITED COMPLIMENTS. <br />
+          GUARANTEED.
+        </div>
+      </div>
+    </div>
+
+    <div class="refund">
+      If you don't love your Goby within 60 days, we'll take it back
+      <br />for a full refund. And if at any time your Goby's performance
+      <br />is anything less than perfect,we'll replace it free of charge.
+      <div><button class="shopNow thirdButton">GET YOUR GOBY</button></div>
+    </div>
+
+    <div class="finalBar0" >
+      <div class="finalBar">
+        <div class="logoGoby">
+          <div><img src="/clogo.png" alt="" /></div>
+          <div class="gobyText">GOBY</div>
+        </div>
+        <div class="termsPolicy">
+          <div class="terms">TERMS OF SERVICE</div>
+          <div class="policy">PRIVACY POLICY</div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
