--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <div><button class="shopNow">SHOP GOBY</button></div>
       </div>
-      <div class="fiveFeatures">
+      <div class="fiveFeature">
         <div><img src="/pipeimage.png" alt="" class="pipeImage" /></div>
         <div class="logoFeature">
           <div><img src="/tickimage.png" alt="" class="arrowlogo" /></div>
@@ -192,19 +192,19 @@
     <div class="variousUsers0">
       <div class="variousUsers">
         <div class="users">
-          <div><img src="/flashfoodimage.png" alt="" /></div>
+          <div><img src="/flashfoodimage.png" alt="" class="flashFoodImage"/></div>
           <div class="userType">@FLASHFOOD</div>
         </div>
         <div class="users">
-          <div><img src="/whimsicalchickimage.png" alt="" /></div>
+          <div><img src="/whimsicalchickimage.png" alt="" class="flashFoodImage"/></div>
           <div class="userType">@THE WHIMSICAL CHICK</div>
         </div>
         <div class="users">
-          <div><img src="/blushedlilyimage.png" alt="" /></div>
+          <div><img src="/blushedlilyimage.png" alt="" class="flashFoodImage"/></div>
           <div class="userType">@THE BLUSHED LILY</div>
         </div>
         <div class="users">
-          <div><img src="/rosalieagencyimage.png" alt="" /></div>
+          <div><img src="/rosalieagencyimage.png" alt="" class="flashFoodImage"/></div>
           <div class="userType">@ROSALIE AGENCY</div>
         </div>
       </div>
