class names changed

--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
   </head>
   <body>
     <div class="mainNavbar">
-      <div class="nestedNavbar">
+      <div class="introduction">
         <div class="companyName">GOBY</div>
-        <div class="navIconButton">
-          <div class="subscribeArrow">
+        <div class="quickSubscribeAndShop">
+          <div class="subscriptionPrompt">
             <div class="subscribe">SUBSCRIBE & SAVE</div>
             <div><img src="/arrowlogo.png" alt="" class="arrowlogo" /></div>
           </div>
-          <div><button class="shopNow">SHOP NOW</button></div>
+          <div><button class="multiUsageButton">SHOP NOW</button></div>
         </div>
       </div>
     </div>
 
-    <div class="twobrushesImageSection">
+    <div class="mainAdvertisementSection">
       <img src="/twobrushesimage.jfif" alt="" class="twobrushesImage" />
 
       <div class="promotionSection">
@@ -31,108 +31,110 @@
             class="dentistRecommendedLogo"
           />
         </div>
-        <div class="brushingPerfectedText">BRUSHING PERFECTED</div>
-        <div class="gobyProvided">
+        <div class="qualityClaimPart1">BRUSHING PERFECTED</div>
+        <div class="qualityClaimPart2">
           Goby provided an award-winning brush <br />at a jaw dropping price
         </div>
-        <div><button class="shopNow secondButton">SHOP NOW</button></div>
-      </div>
-    </div>
-
-    <div class="mainNavbar afterHeroesSection0">
-      <div class="nestedNavbar afterHeroesSection">
-        <div class="features">
-          <div class="firstFeature">Top Electric Toothbrush</div>
-          <div class="secondFeature">ASK THE DENTIST</div>
-        </div>
-        <div class="features">
-          <div class="firstFeature">Best Subsription Toothbrush</div>
-          <div class="secondFeature">WIRECUTTER</div>
-        </div>
-        <div class="features">
-          <div class="firstFeature">2017 Grooming Award</div>
-          <div class="secondFeature">MEN'S HEALTH</div>
+        <div>
+          <button class="multiUsageButton secondButton">SHOP NOW</button>
         </div>
       </div>
     </div>
 
-    <div class="singleBrushImageSection">
+    <div class="mainNavbar accoladesSection0">
+      <div class="introduction accoladesSection">
+        <div>
+          <div class="accoladePart1">Top Electric Toothbrush</div>
+          <div class="accoladePart2">ASK THE DENTIST</div>
+        </div>
+        <div>
+          <div class="accoladePart1">Best Subscription Toothbrush</div>
+          <div class="accoladePart2">WIRECUTTER</div>
+        </div>
+        <div>
+          <div class="accoladePart1">2017 Grooming Award</div>
+          <div class="accoladePart2">MEN'S HEALTH</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="productFeatures">
       <img src="/brushimage.jpg" alt="" class="twobrushesImage" />
-      <div class="benefitsSection">
-        <div class="benefits">
+      <div class="whyToBuy">
+        <div class="reasonToBuy">
           MAXIMUM CLEAN. <br />
           FRACTION OF THE PRICE.
         </div>
-        <div><button class="shopNow">SHOP GOBY</button></div>
+        <div><button class="multiUsageButton">SHOP GOBY</button></div>
       </div>
-      <div class="fiveFeature">
+      <div class="feature1">
         <div><img src="/pipeimage.png" alt="" class="pipeImage" /></div>
-        <div class="logoFeature">
+        <div class="featureDescriptionAndTickImage">
           <div><img src="/tickimage.png" alt="" class="arrowlogo" /></div>
-          <div class="variousFeatures">OSCILLATIONG BRUSH HEAD</div>
+          <div class="featureDescription">OSCILLATIONG BRUSH HEAD</div>
         </div>
       </div>
-      <div class="fiveFeature2">
+      <div class="feature2">
         <div><img src="/pipeimage.png" alt="" class="pipeImage" /></div>
-        <div class="logoFeature">
+        <div class="featureDescriptionAndTickImage">
           <div><img src="/tickimage.png" alt="" class="arrowlogo" /></div>
-          <div class="variousFeatures">BUILT-IN TIMER</div>
+          <div class="featureDescription">BUILT-IN TIMER</div>
         </div>
       </div>
-      <div class="fiveFeature3">
+      <div class="feature3">
         <div><img src="/pipeimage.png" alt="" class="pipeImage" /></div>
-        <div class="logoFeature">
+        <div class="featureDescriptionAndTickImage">
           <div><img src="/tickimage.png" alt="" class="arrowlogo" /></div>
-          <div class="variousFeatures">LONG LASTING BATTERY</div>
+          <div class="featureDescription">LONG LASTING BATTERY</div>
         </div>
       </div>
-      <div class="fiveFeature4">
+      <div class="feature4">
         <div><img src="/pipeimage.png" alt="" class="pipeImage" /></div>
-        <div class="logoFeature">
+        <div class="featureDescriptionAndTickImage">
           <div><img src="/tickimage.png" alt="" class="arrowlogo" /></div>
-          <div class="variousFeatures">SOFT, PREMIUM BRISTLES</div>
+          <div class="featureDescription">SOFT, PREMIUM BRISTLES</div>
         </div>
       </div>
-      <div class="fiveFeature5">
+      <div class="feature5">
         <div><img src="/pipeimage.png" alt="" class="pipeImage" /></div>
-        <div class="logoFeature">
+        <div class="featureDescriptionAndTickImage">
           <div><img src="/tickimage.png" alt="" class="arrowlogo" /></div>
-          <div class="variousFeatures">SOFT-TOUCH HANDLE</div>
+          <div class="featureDescription">SOFT-TOUCH HANDLE</div>
         </div>
       </div>
     </div>
 
-    <div class="healthierSmileAndMOre">
-      <div class="healthierSmile">A HEALTHIER SMILE, DELIVERED.</div>
-      <div class="moreComments">
+    <div class="productTechnicals">
+      <div class="productTechnicalsInDetailPart1">A HEALTHIER SMILE, DELIVERED.</div>
+      <div class="productTechnicalsInDetailPart2">
         Rotationally oscillating brush heads are proven to clean <br />
         better. By selling directly to you, we offer an award winning
         <br />electric toothbrush at a fraction of the price.
       </div>
     </div>
 
-    <div class="subscribeSaveCancel0">
-      <div class="subscribeSaveCancel">
-        <div class="firstOption">
+    <div class="businessModel0">
+      <div class="businessModel">
+        <div class="businessModelWorking">
           <div><img src="/thumbsupemoji.png" alt="" class="emoji" /></div>
-          <div class="option">SUBSCRIBE</div>
-          <div class="optionAdvantage">
+          <div class="businessModelTitle">SUBSCRIBE</div>
+          <div class="modelAdvantage">
             and we'll automatically <br />
             send you new brush heads.
           </div>
         </div>
-        <div class="firstOption">
+        <div class="businessModelWorking">
           <div><img src="/thumbsupemoji.png" alt="" class="emoji" /></div>
-          <div class="option">SAVE $15</div>
-          <div class="optionAdvantage">
+          <div class="businessModelTitle">SAVE $15</div>
+          <div class="modelAdvantage">
             on your brush kit <br />
             when you subscribe.
           </div>
         </div>
-        <div class="firstOption">
+        <div class="businessModelWorking">
           <div><img src="/thumbsupemoji.png" alt="" class="emoji" /></div>
-          <div class="option">CANCEL ANYTIME</div>
-          <div class="optionAdvantage">
+          <div class="businessModelTitle">CANCEL ANYTIME</div>
+          <div class="modelAdvantage">
             or change your subscription, <br />
             no questions asked.
           </div>
@@ -140,24 +142,24 @@
       </div>
     </div>
 
-    <div class="brushHeadsBuzz0">
-      <div class="brushHeadsBuzz">
+    <div class="productReviewWithProductImage0">
+      <div class="productReviewWithProductImage">
         <div>
           <img src="/brushheadsimage.png" alt="" class="brushHeadsImage" />
         </div>
         <div class="thanSymbols">
           <img src="/lessthansymbol.png" alt="" />
         </div>
-        <div class="buzz">
-          <div class="buzzOnGoby">THE BUZZ ON GOBY</div>
-          <div class="moreOnBuzz">
+        <div class="productReview">
+          <div class="productReviewTitle">THE BUZZ ON GOBY</div>
+          <div class="productReviewDetails">
             "The company has revamped the <br />
             business of teeth-cleaning in the <br />
             Warby Parker vein: smart sourcing, <br />direct-to-consumer
             delivery, and <br />sleek packaging."
           </div>
-          <div class="vogue">-VOGUE</div>
-          <div><button class="shopNow">SEE REVIEWS</button></div>
+          <div class="productReviewer">-Vogue</div>
+          <div><button class="multiUsageButton">SEE REVIEWS</button></div>
         </div>
         <div class="thanSymbols">
           <img src="greaterthansymbol.png" alt="" />
@@ -165,16 +167,16 @@
       </div>
     </div>
 
-    <div class="classRoomImageDonation">
+    <div class="philanthropyWithExampleImage">
       <img src="/classroomimage.jpg" alt="" class="classRoomImage" />
-      <div class="donation">
-        <div class="donationDetetails">GOBI GIVES BACK</div>
-        <div class="donationDetetails2">
+      <div class="philanthropy">
+        <div class="philanthropyTitle">GOBI GIVES BACK</div>
+        <div class="philanthropyDetails">
           We're on a mission to make oral care accessible to all. <br />By
           selling to you, we are able to offer premium oral <br />care at a
           fraction of the price. But it doesn't stop there.
         </div>
-        <div class="donationDetetails2">
+        <div class="philanthropyDetails">
           We also partner with NYU College of Dentistry's Global <br />
           Student Outreach Program, donating a percentage of all sales <br />to
           help provide dental services to people around the world as <br />well
@@ -183,35 +185,43 @@
       </div>
     </div>
 
-    <div class="hashTagDetails">
-      <div class="hashTag">#GOBYGRAM</div>
-      <div class="afterHashTag">
+    <div class="hashTag">
+      <div class="hashTagID">#GOBYGRAM</div>
+      <div class="hashTagDescription">
         See who's already has their routine electrified.
       </div>
     </div>
     <div class="variousUsers0">
       <div class="variousUsers">
         <div class="users">
-          <div><img src="/flashfoodimage.png" alt="" class="flashFoodImage"/></div>
+          <div>
+            <img src="/flashfoodimage.png" alt="" class="flashFoodImage" />
+          </div>
           <div class="userType">@FLASHFOOD</div>
         </div>
         <div class="users">
-          <div><img src="/whimsicalchickimage.png" alt="" class="flashFoodImage"/></div>
+          <div>
+            <img src="/whimsicalchickimage.png" alt="" class="flashFoodImage" />
+          </div>
           <div class="userType">@THE WHIMSICAL CHICK</div>
         </div>
         <div class="users">
-          <div><img src="/blushedlilyimage.png" alt="" class="flashFoodImage"/></div>
+          <div>
+            <img src="/blushedlilyimage.png" alt="" class="flashFoodImage" />
+          </div>
           <div class="userType">@THE BLUSHED LILY</div>
         </div>
         <div class="users">
-          <div><img src="/rosalieagencyimage.png" alt="" class="flashFoodImage"/></div>
+          <div>
+            <img src="/rosalieagencyimage.png" alt="" class="flashFoodImage" />
+          </div>
           <div class="userType">@ROSALIE AGENCY</div>
         </div>
       </div>
     </div>
 
-    <div class="smileyCompliments0">
-      <div class="smileyCompliments">
+    <div class="tagLIneWithEmoji0">
+      <div class="tagLIneWithEmoji">
         <div>
           <img
             src="/freshguaranteelogo.png"
@@ -219,22 +229,24 @@
             class="freshGuaranteeLogo"
           />
         </div>
-        <div class="compliments">
+        <div class="tagLine">
           UNLIMITED COMPLIMENTS. <br />
           GUARANTEED.
         </div>
       </div>
     </div>
 
-    <div class="refund">
+    <div class="refundPolicy">
       If you don't love your Goby within 60 days, we'll take it back
       <br />for a full refund. And if at any time your Goby's performance
       <br />is anything less than perfect,we'll replace it free of charge.
-      <div><button class="shopNow thirdButton">GET YOUR GOBY</button></div>
+      <div>
+        <button class="multiUsageButton thirdButton">GET YOUR GOBY</button>
+      </div>
     </div>
 
-    <div class="finalBar0" >
-      <div class="finalBar">
+    <div class="concludingSection0">
+      <div class="concludingSection">
         <div class="logoGoby">
           <div><img src="/clogo.png" alt="" /></div>
           <div class="gobyText">GOBY</div>
